RESOLVED FIXED220692
[JSC] DFG/FTL Atomics should not accept Float32/Float64 typed arrays
https://bugs.webkit.org/show_bug.cgi?id=220692
Summary [JSC] DFG/FTL Atomics should not accept Float32/Float64 typed arrays
Yusuke Suzuki
Reported 2021-01-17 17:35:05 PST
[JSC] DFG/FTL Atomics should not accept Float32/Float64 typed arrays
Attachments
Patch (4.36 KB, patch)
2021-01-17 17:37 PST, Yusuke Suzuki
no flags
Patch (8.66 KB, patch)
2021-01-17 21:37 PST, Yusuke Suzuki
no flags
Patch (6.63 KB, patch)
2021-01-17 21:40 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-01-17 17:37:03 PST
Yusuke Suzuki
Comment 2 2021-01-17 17:37:06 PST
Yusuke Suzuki
Comment 3 2021-01-17 21:37:33 PST
Yusuke Suzuki
Comment 4 2021-01-17 21:40:24 PST
Mark Lam
Comment 5 2021-01-17 22:08:03 PST
Comment on attachment 417794 [details] Patch r=me
EWS
Comment 6 2021-01-17 23:56:49 PST
Committed r271573: <https://trac.webkit.org/changeset/271573> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417794 [details].
Note You need to log in before you can comment on or make changes to this bug.