[JSC] DFG/FTL Atomics should not accept Float32/Float64 typed arrays https://bugs.webkit.org/show_bug.cgi?id=220692 <rdar://problem/73238369>

Reviewed by Mark Lam.

JSTests:

* stress/atomics-float-edge.js: Added.
(foo):

Source/JavaScriptCore:

We accidentally accept Float32/Float64 typed arrays. We should accept only integer TypedArrays (Int8, Uint8, ... etc.)
as specified in [1]. If the other types come, we just make it Array::Generic and call slow path which can handle them.

[1]: https://tc39.es/ecma262/#sec-validateintegertypedarray

* dfg/DFGArrayMode.h:
(JSC::DFG::ArrayMode::isOneOfTypedArrayView const): Deleted.
* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):


Canonical link: https://commits.webkit.org/233109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271573 268f45cc-cd09-0410-ab3c-d52691b4dbfc